Solution for challenge 7

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             #Yummy
             <!-- #5 #channels #icons now grouped in .channel-meta span -->
             <span class="channel-meta">
-                <!-- #6 Replace all stars and chevrons with Font Awesome icons. -->
+                <!-- #7 Replace all stars and chevrons with Font Awesome icons. -->
                 <i class="far fa-star"></i>
                 <i class="fas fa-chevron-right"></i>
             </span>
@@ -48,7 +48,7 @@
             #SevenContinents
             <!-- #5 #channels #icons now grouped in .channel-meta span -->
             <span class="channel-meta">
-                <!-- #6 Replace all stars and chevrons with Font Awesome icons. -->
+                <!-- #7 Replace all stars and chevrons with Font Awesome icons. -->
                 <i class="fas fa-star"></i>
                 <i class="fas fa-chevron-right"></i>
             </span>
@@ -58,7 +58,7 @@
             #KillerApp
             <!-- #5 #channels #icons now grouped in .channel-meta span -->
             <span class="channel-meta">
-                <!-- #6 Replace all stars and chevrons with Font Awesome icons. -->
+                <!-- #7 Replace all stars and chevrons with Font Awesome icons. -->
                 <i class="far fa-star"></i>
                 <i class="fas fa-chevron-right"></i>
             </span>
@@ -68,7 +68,7 @@
             #FirstPersonOnMars
             <!-- #5 #channels #icons now grouped in .channel-meta span -->
             <span class="channel-meta">
-                <!-- #6 Replace all stars and chevrons with Font Awesome icons. -->
+                <!-- #7 Replace all stars and chevrons with Font Awesome icons. -->
                 <i class="fas fa-star"></i>
                 <i class="fas fa-chevron-right"></i>
             </span>
@@ -78,7 +78,7 @@
             #Octoberfest
             <!-- #5 #channels #icons now grouped in .channel-meta span -->
             <span class="channel-meta">
-                <!-- #6 Replace all stars and chevrons with Font Awesome icons. -->
+                <!-- #7 Replace all stars and chevrons with Font Awesome icons. -->
                 <i class="far fa-star"></i>
                 <i class="fas fa-chevron-right"></i>
             </span>
@@ -91,13 +91,16 @@
         <!-- #6 #taptab buttons are getting ids with #hyphens and a #change listener calling selectTab.
              Pass the #argument to select Tab -->
         <button class="selected" id="tab-new" onclick="selectTab('#tab-new')">
+            <!-- #7 Change the tab bar’s icons to Font Awesome icons -->
             <i class="far fa-lightbulb"></i> New
         </button>
         <button id="tab-trending" onclick="selectTab('#tab-trending')">
-            <img src="http://ip.lfe.mw.tum.de/sections/fire.png" alt="Hot"> Trending
+            <!-- #7 Change the tab bar’s icons to Font Awesome icons -->
+            <i class="fas fa-fire"></i> Trending
         </button>
         <button id="tab-favorites" onclick="selectTab('#tab-favorites')">
-            <img src="http://ip.lfe.mw.tum.de/sections/star.png" alt="Star"> Favorites
+            <!-- #7 Change the tab bar’s icons to Font Awesome icons -->
+            <i class="fas fa-star"></i> Favorites
         </button>
     </div>
 </div>
@@ -166,7 +169,8 @@
 
     <!-- #5 #smileys #insert the chat-bar -->
     <div id="chat-bar"> <!-- #6 #smile #show the menu on click -->
-        <button id="emojis-button" onclick="toggleEmojis()"><img src="http://ip.lfe.mw.tum.de/sections/smile-o.png" alt="Smiley"></button>
+        <!-- #7 show Font Awesome icon -->
+        <button id="emojis-button" onclick="toggleEmojis()"><i class="far fa-smile"></i></button>
         <div id="emojis">&#x1F601; &#x1F602; &#x1F603; &#x1F604; &#x1F605; &#x1F606; &#x1F607;</div>
     </div>
 </div>
