Building solution to challenge 8

--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
         <!-- #7 show Font Awesome icon -->
         <button id="emojis-button" onclick="toggleEmojis()"><i class="far fa-smile"></i></button>
         <div id="emojis">&#x1F601; &#x1F602; &#x1F603; &#x1F604; &#x1F605; &#x1F606; &#x1F607;</div>
-        <button id="send-button" onclick="sendMessage()"><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
+        <input id="message-field" type="text" value="Message..." maxlength="140">
+        <button id="send-button" onclick="sendMessage($('#message-field').val())"><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
     </div>
 </div>
 
